feat: implementa imagem de evento
